--- a/hakkımızda.html
+++ b/hakkımızda.html
@@ -94,7 +94,7 @@
         </div>
 
         <div class="kurucu-card">
-            <img src="WhatsApp Görsel 2024-05-09 saat 16.15.20_35cf8752.jpg" alt="Vision">
+            <img src="" alt="Vision">
             <div class="content-kur">
                 <h2>Kurucu Ortak</h2>
                 <h3>Ufuk Karataş</h3>
