--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <div class="inner-content">
                         <div class="inner-content-text">
                             <h2>Müşteri Odaklılık</h2>
-                            <p>Karataş Mimarlık ve Mühendislik, müşteri memnuniyetini öncelikli kabul eder. Her müşteriyle yakın bir ilişki kurarak ihtiyaçlarını anlar ve titizlikle dinler. Firma, müşteri memnuniyetini sağlamak için özgün çözümler üretir.
+                            <p>Karataş Mimarlık ve Mühendislik, müşteri memnuniyetini öncelikli olarak kabul eder. Her müşteriyle samimi ve yakın bir ilişki kurarak ihtiyaçlarını anlar ve titizlikle dinler. Firma, müşteri memnuniyetini sağlamak için özgün çözümler üretir.
                             </p>
                         </div>
                     </div>
