--- a/Hizmetler.html
+++ b/Hizmetler.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
     <title>Document</title>
+    <style>
+        
+    </style>
 </head>
 <body>
 
