--- a/galeri.html
+++ b/galeri.html
@@ -18,7 +18,7 @@
         <header>
             <a href="index.html">
                 <div class="logo">
-                    <img src="karatas_logo.jpg" alt="">
+                    <img src="karatas_logo2.png" alt="">
                 </div>
             </a>
 
