--- a/hakkımızda.html
+++ b/hakkımızda.html
@@ -19,7 +19,7 @@
             
             <a href="index.html">
                 <div class="logo">
-                    <img src="karatas_logo.jpg" alt="">
+                    <img src="karatas_logo2.png" alt="">
                 </div>
             </a>
 
