--- a/index.html
+++ b/index.html
@@ -50,18 +50,17 @@
 
     </section>
 
-    <div class="home">
-        <div class="mySwiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="nnnn.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="ai-generated-8498127_1280.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="ai-generated-8498127_1280.jpg" alt=""></div>        
+    <section class="hero">
+        <div class="overlay"></div>
+        <div class="hero-content">
+            <h2>Sağlam Bir Gelecek İnşası</h2>
+            <p> Dürüst, Güvenilir İnşaat</p>
+            <div class="hero-buttons">
+                <a href="Hizmetler.html" class="btn">Hizmetlerimiz</a>
+                <a href="İletişim.html" class="btn">Bize Ulaşın</a>
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
         </div>
-
-    </div>
+    </section>
 
 
 
@@ -84,7 +83,7 @@
                     <div class="inner-content">
                         <div class="inner-content-text">
                             <h2>Deneyim ve Uzmanlık</h2>
-                            <p>Karataş Mimarlık ve Mühendislik, sektörde deneyimli bir firma olarak öne çıkar. Firma, uzman kadrosuyla birlikte müşterilere kaliteli hizmet sunmak için geniş bir bilgi birikimine ve deneyime sahiptir.</p>
+                            <p>Karataş Grup Mimarlık , sektörde deneyimli bir firma olarak öne çıkar. Firma, uzman kadrosuyla birlikte müşterilere kaliteli hizmet sunmak için geniş bir bilgi birikimine ve deneyime sahiptir.</p>
                         </div>
                     </div>
                 </div>
@@ -102,7 +101,7 @@
                     <div class="inner-content">
                         <div class="inner-content-text">
                             <h2>Yaratıcılık ve İnovasyon</h2>
-                            <p>Karataş Mimarlık ve Mühendislik, yaratıcı ve yenilikçi çözümler sunmaya odaklanır. Firma, her proje için benzersiz ve özgün tasarımlar geliştirir ve müşterilerin beklentilerini aşmak için sürekli olarak yeni fikirler üretir.</p>
+                            <p>Karataş Grup Mimarlık, yaratıcı ve yenilikçi çözümler sunmaya odaklanır. Firma, her proje için benzersiz ve özgün tasarımlar geliştirir ve müşterilerin beklentilerini aşmak için sürekli olarak yeni fikirler üretir.</p>
                         </div>
                     </div>
                 </div>
@@ -121,7 +120,7 @@
                     <div class="inner-content">
                         <div class="inner-content-text">
                             <h2>Kalite ve Güvenilirlik</h2>
-                            <p>Firma, kaliteli ve güvenilir hizmet sunma konusunda kendini kanıtlamıştır. Karataş Mimarlık ve Mühendislik, projelerinde kalite standartlarına sıkı sıkıya bağlı kalarak müşteri memnuniyetini en üst düzeyde tutar.</p>
+                            <p>Firma, kaliteli ve güvenilir hizmet sunma konusunda kendini kanıtlamıştır. Karataş Grup Mimarlık, projelerinde kalite standartlarına sıkı sıkıya bağlı kalarak müşteri memnuniyetini en üst düzeyde tutar.</p>
                         </div>
                     </div>
                 </div>
@@ -139,7 +138,7 @@
                     <div class="inner-content">
                         <div class="inner-content-text">
                             <h2>Çevresel Duyarlılık</h2>
-                            <p>Karataş Mimarlık ve Mühendislik, çevreye duyarlı ve sürdürülebilir çözümler geliştirme konusunda Uzmandır. Firma, çevresel etkileri en aza indirgemek ve doğal kaynakları korumak için projelerinde çevresel faktörleri dikkate alır.</p>
+                            <p>Karataş Grup Mimarlık , çevreye duyarlı ve sürdürülebilir çözümler geliştirme konusunda Uzmandır. Firma, çevresel etkileri en aza indirgemek ve doğal kaynakları korumak için projelerinde çevresel faktörleri dikkate alır.</p>
                         </div>
                     </div>
                 </div>
@@ -157,7 +156,7 @@
                     <div class="inner-content">
                         <div class="inner-content-text">
                             <h2>Müşteri Odaklılık</h2>
-                            <p>Karataş Mimarlık ve Mühendislik, müşteri memnuniyetini öncelikli olarak kabul eder. Her müşteriyle samimi ve yakın bir ilişki kurarak ihtiyaçlarını anlar ve titizlikle dinler. Firma, müşteri memnuniyetini sağlamak için özgün çözümler üretir.
+                            <p>Karataş Grup Mimarlık , müşteri memnuniyetini öncelikli olarak kabul eder. Her müşteriyle samimi ve yakın bir ilişki kurarak ihtiyaçlarını anlar ve titizlikle dinler. Firma, müşteri memnuniyetini sağlamak için özgün çözümler üretir.
                             </p>
                         </div>
                     </div>
@@ -176,7 +175,7 @@
                     <div class="inner-content">
                         <div class="inner-content-text">
                             <h2>Çeşitlilik ve Kapsamlılık</h2>
-                            <p> Karataş Mimarlık ve Mühendislik, geniş bir proje yelpazesine ve farklı sektörlerde faaliyet gösterme kabiliyetine sahiptir. Bu çeşitlilik, çalışanların deneyim kazanmasını sağlar ve farklı projelerde uzmanlaşmalarını destekler.</p>
+                            <p> Karataş Grup Mimarlık, geniş bir proje yelpazesine ve farklı sektörlerde faaliyet gösterme kabiliyetine sahiptir. Bu çeşitlilik, çalışanların deneyim kazanmasını sağlar ve farklı projelerde uzmanlaşmalarını destekler.</p>
                         </div>
                     </div>
                 </div>
