--- a/İletişim.html
+++ b/İletişim.html
@@ -67,9 +67,18 @@
     
             <h2>Sosyal Medya:</h2>
             <ul>
-                <li><a href="https://www.facebook.com/atainsaat">Facebook</a></li>
-                <li><a href="https://www.twitter.com/atainsaat">Twitter</a></li>
-                <li><a href="https://www.instagram.com/atainsaat">Instagram</a></li>
+                <li><a href="https://www.instagram.com/your-instagram-account" class="facebook-btn" target="_blank">
+                        <img src="Facebook_Logo_(2019).png" alt="">
+                    </a>
+                </li>
+                <li><a href="https://www.instagram.com/your-instagram-account" class="twitter-btn" target="_blank">
+                        <img src="twitter.png" alt="">
+                    </a>
+                </li>
+                <li><a href="https://www.instagram.com/your-instagram-account" class="instagram2-btn" target="_blank">
+                        <img src="Instagram_logo_2022.svg.webp" alt="">
+                    </a>
+                </li>
             </ul>
         </div>
     
