--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
     <title>Karataş Mimarlık</title>
+    <style>
+        
+    </style>
 <body>
 
     <section>
