--- a/index.html
+++ b/index.html
@@ -53,17 +53,18 @@
 
     </section>
 
-    <section class="hero">
-        <div class="overlay"></div>
-        <div class="hero-content">
-            <h2>Sağlam Bir Gelecek İnşası</h2>
-            <p> Dürüst, Güvenilir İnşaat</p>
-            <div class="hero-buttons">
-                <a href="Hizmetler.html" class="btn">Hizmetlerimiz</a>
-                <a href="İletişim.html" class="btn">Bize Ulaşın</a>
+    <main>
+        <div class="main-container">
+            <div class="text-section">
+                <h1>Karataş Grup Mimarlık</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae deserunt culpa molestiae molestias dolorem quia minima. Aliquid cupiditate adipisci explicabo voluptas reprehenderit illum deleniti incidunt facere eum dolore. Consequatur, porro?</p>
+            </div>
+            <div class="image-section">
+                <img src="ai-generated-8752765_1920.jpg" alt="Building Image">
             </div>
         </div>
-    </section>
+    </main>
+
 
 
 
