--- a/hakkımızda.html
+++ b/hakkımızda.html
@@ -71,7 +71,15 @@
                     <h2>Vizyonumuz</h2>
                     <p>Karataş Mimarlık Mühendislik Firması olarak, gelecekte de sektörde öncü bir konumda olmayı ve dünya standartlarında projelere imza atmaya devam etmeyi hedefliyoruz. Müşteri memnuniyetini her zaman ön planda tutarak, teknolojiyi yakından takip ederek ve ekip ruhuyla çalışarak, yenilikçi ve sürdürülebilir çözümler sunmaya devam edeceğiz. Toplumun ve gelecek nesillerin ihtiyaçlarını göz önünde bulundurarak, estetik, fonksiyonellik ve çevresel duyarlılık ilkeleriyle projeler geliştirmeye devam edeceğiz.</p>
                 </div>
-            </div>           
+            </div>     
+            
+            <div class="about-card">
+                <img src="vision.jpg" alt="Vision">
+                <div class="content">
+                    <h2>Vizyonumuz</h2>
+                    <p>Karataş Mimarlık Mühendislik Firması olarak, gelecekte de sektörde öncü bir konumda olmayı ve dünya standartlarında projelere imza atmaya devam etmeyi hedefliyoruz. Müşteri memnuniyetini her zaman ön planda tutarak, teknolojiyi yakından takip ederek ve ekip ruhuyla çalışarak, yenilikçi ve sürdürülebilir çözümler sunmaya devam edeceğiz. Toplumun ve gelecek nesillerin ihtiyaçlarını göz önünde bulundurarak, estetik, fonksiyonellik ve çevresel duyarlılık ilkeleriyle projeler geliştirmeye devam edeceğiz.</p>
+                </div>
+            </div>  
         </div>
     </main>
 
