--- a/index.html
+++ b/index.html
@@ -56,12 +56,14 @@
     <main>
         <div class="main-container">
             <div class="text-section">
-                <h1>Karataş Grup Mimarlık</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae deserunt culpa molestiae molestias dolorem quia minima. Aliquid cupiditate adipisci explicabo voluptas reprehenderit illum deleniti incidunt facere eum dolore. Consequatur, porro?</p>
-            </div>
-            <div class="image-section">
                 <img src="ai-generated-8752765_1920.jpg" alt="Building Image">
+                <div class="text-container">
+                    <h1>Karataş Grup Mimarlık</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae deserunt culpa molestiae molestias dolorem quia minima. Aliquid cupiditate adipisci explicabo voluptas reprehenderit illum deleniti incidunt facere eum dolore. Consequatur, porroLorem ipsum dolor sit amet consectetur adipisicing elit. Beatae deserunt culpa molestiae molestias dolorem quia minima. Aliquid cupiditate adipisci explicabo voluptas reprehenderit illum deleniti incidunt facere eum dolore. Consequatur, porro??</p>
+                </div>
+                
             </div>
+            
         </div>
     </main>
 
