--- a/galeri.html
+++ b/galeri.html
@@ -26,8 +26,7 @@
             <nav class="navbar">
 
                 <a href="index.html">Anasayfa</a>
-                <a href="hakkımızda.html">Hakkımızda</a>
-                <a href="Hizmetler.html">Hizmetler</a>
+                <a href="hakkımızda.html">Hakkımızda</a>                
                 <a href="galeri.html">Galeri</a>
                 <a href="İletişim.html">İletişim</a>
                
@@ -50,117 +49,40 @@
 
     </section>
 
+    <div class="main-creative">
+        <h1>our creative work</h1>
+
+        <div class="main-inner-creative">
+
+            <div class="inner-creative">
+                <img src="architect-3979490_1920.jpg" alt="">
+            </div>
+
+            <div class="inner-creative">
+                <img src="city-3213676_1280.jpg" alt="">
+            </div>
+
+            <div class="inner-creative">
+                <img src="crane-8400990_1920.jpg" alt="">
+            </div>
+
+            <div class="inner-creative">
+                <img src="construction-2682641_1280.jpg" alt="">
+            </div>
+
+            <div class="inner-creative">
+                <img src="civil-engineering-8053197_1280.png" alt="">
+            </div>
+
+            <div class="inner-creative">
+                <img src="ai-generated-8498127_1280.jpg" alt="">
+            </div>
 
 
-    <div class="our-featured">
-
-        <div class="feture-heading">
-            <h1>Our featured<span>Work</span></h1>
-        </div>
-
-        <div class="main-feautred">
-
-                <div class="inner-featred " onclick="toggleFullScreen(this)">
-                    <div class="feature-icons">
-
-                    </div>
-                    <div class="feature-image">
-                        <img src="meeting-2284501_640.jpg" alt="">
-                        <span class="close-btn" onclick="closeFullScreen(this)">X</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil nisi earum obcaecati odio cupiditate provident officiis quae expedita similique. Suscipit optio ullam in animi recusandae, nam architecto temporibus eligendi possimus.</p>
-                    </div>
-                </div>
-
-                <div class="inner-featred" onclick="toggleFullScreen(this)">
-                    <div class="feature-icons">
-
-                    </div>
-                    <div class="feature-image">
-                        <img src="meeting-2284501_640.jpg" alt="">
-                        <span class="close-btn" onclick="closeFullScreen(this)">X</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus quaerat pariatur voluptatem blanditiis iure? Beatae voluptatibus corporis unde deleniti natus totam nihil at voluptate, provident quia necessitatibus nemo reiciendis qui.</p>
-                    </div>
-                </div>
-
-                <div class="inner-featred" onclick="toggleFullScreen(this)">
-                    <div class="feature-icons">
-
-                    </div>
-                    <div class="feature-image">
-                        <img src="meeting-2284501_640.jpg" alt="">
-                        <span class="close-btn" onclick="closeFullScreen(this)">X</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus quaerat pariatur voluptatem blanditiis iure? Beatae voluptatibus corporis unde deleniti natus totam nihil at voluptate, provident quia necessitatibus nemo reiciendis qui.</p>
-                    </div>
-                </div>
-
-                <div class="inner-featred" onclick="toggleFullScreen(this)">
-                    <div class="feature-icons">
-
-                    </div>
-                    <div class="feature-image">
-                        <img src="meeting-2284501_640.jpg" alt="">
-                        <span class="close-btn" onclick="closeFullScreen(this)">X</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus quaerat pariatur voluptatem blanditiis iure? Beatae voluptatibus corporis unde deleniti natus totam nihil at voluptate, provident quia necessitatibus nemo reiciendis qui.</p>
-                    </div>
-                </div>
-
-                <div class="inner-featred" onclick="toggleFullScreen(this)">
-                    <div class="feature-icons">
-
-                    </div>
-                    <div class="feature-image">
-                        <img src="meeting-2284501_640.jpg" alt="">
-                        <span class="close-btn" onclick="closeFullScreen(this)">X</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus quaerat pariatur voluptatem blanditiis iure? Beatae voluptatibus corporis unde deleniti natus totam nihil at voluptate, provident quia necessitatibus nemo reiciendis qui.</p>
-                    </div>
-                </div>
-
-                <div class="inner-featred" onclick="toggleFullScreen(this)">
-                    <div class="feature-icons">
-
-                    </div>
-                    <div class="feature-image">
-                        <img src="meeting-2284501_640.jpg" alt="">
-                        <span class="close-btn" onclick="closeFullScreen(this)">X</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus quaerat pariatur voluptatem blanditiis iure? Beatae voluptatibus corporis unde deleniti natus totam nihil at voluptate, provident quia necessitatibus nemo reiciendis qui.</p>
-                    </div>
-                </div>
-
-                <div class="inner-featred" onclick="toggleFullScreen(this)">
-                    <div class="feature-icons">
-
-                    </div>
-                    <div class="feature-image">
-                        <img src="meeting-2284501_640.jpg" alt="">
-                        <span class="close-btn" onclick="closeFullScreen(this)">X</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus quaerat pariatur voluptatem blanditiis iure? Beatae voluptatibus corporis unde deleniti natus totam nihil at voluptate, provident quia necessitatibus nemo reiciendis qui.</p>
-                    </div>
-                </div>
-
-                <div class="inner-featred" onclick="toggleFullScreen(this)">
-                    <div class="feature-icons">
-
-                    </div>
-                    <div class="feature-image">
-                        <img src="meeting-2284501_640.jpg" alt="">
-                        <span class="close-btn" onclick="closeFullScreen(this)">X</span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus quaerat pariatur voluptatem blanditiis iure? Beatae voluptatibus corporis unde deleniti natus totam nihil at voluptate, provident quia necessitatibus nemo reiciendis qui.</p>
-                    </div>
-                </div>
-
-                <div class="inner-featred" onclick="toggleFullScreen(this)">
-                    <div class="feature-icons">
-
-                    </div>
-                    <div class="feature-image">
-                        <img src="meeting-2284501_640.jpg" alt="">
-                        <span class="close-btn" onclick="closeFullScreen(this)">X</span>  
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus quaerat pariatur voluptatem blanditiis iure? Beatae voluptatibus corporis unde deleniti natus totam nihil at voluptate, provident quia necessitatibus nemo reiciendis qui.</p>                      
-                    </div>
-                </div>
 
         </div>
     </div>
+    
 
     <div class="footer">
         <div class="main-footer">
